# documentation/swagger.json
@@ -9,124 +9,12 @@
         "version": "1.0.0"
     },
     "paths": {
-        "/samplePhpApi/products/create.php?id={id}&name={name}&price={price}": {
-            "get": {
-                "tags": [
-                    "products"
-                ],
-                "summary": "add new product",
-                "parameters": [
-                    {
-                        "name": "name",
-                        "in": "path",
-                        "description": "new name for this product",
-                        "required": true,
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    {
-                        "name": "price",
-                        "in": "path",
-                        "description": "new price for this product",
-                        "required": true,
-                        "schema": {
-                            "type": "integer",
-                            "format": "int32"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "ok"
-                    },
-                    "404": {
-                        "description": "ERROR : Not found"
-                    },
-                    "default": {
-                        "description": "unexpected error"
-                    }
-                }
-            }
-        },
-        "/samplePhpApi/products/delete.php?id={id}": {
-            "get": {
-                "tags": [
-                    "products"
-                ],
-                "summary": "delete products by ID",
-                "parameters": [
-                    {
-                        "name": "id",
-                        "in": "path",
-                        "description": "Id of record to delete",
-                        "required": true,
-                        "schema": {
-                            "type": "integer",
-                            "format": "int32"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "ok"
-                    },
-                    "404": {
-                        "description": "ERROR : Not found"
-                    },
-                    "default": {
-                        "description": "unexpected error"
-                    }
-                }
-            }
-        },
-        "/samplePhpApi/products/read.php?start={start}&length={length}": {
-            "get": {
-                "tags": [
-                    "products"
-                ],
-                "summary": "List products",
-                "parameters": [
-                    {
-                        "name": "start",
-                        "in": "path",
-                        "description": "start of records to display (zero based)",
-                        "required": false,
-                        "schema": {
-                            "type": "integer",
-                            "format": "int32"
-                        }
-                    },
-                    {
-                        "name": "length",
-                        "in": "path",
-                        "description": "length of records",
-                        "required": false,
-                        "schema": {
-                            "type": "integer",
-                            "format": "int32"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "ok"
-                    },
-                    "404": {
-                        "description": "ERROR : Not found"
-                    },
-                    "default": {
-                        "description": "unexpected error"
-                    }
-                }
-            }
-        },
         "/samplePhpApi/products/search.php?start={start}&length={length}&name={name}&minPrice={minPrice}&maxPrice={maxPrice}": {
             "get": {
                 "tags": [
                     "products"
                 ],
-                "summary": "search in products",
+                "summary": "search in foods",
                 "parameters": [
                     {
                         "name": "start",
@@ -190,60 +78,14 @@
                     }
                 }
             }
-        },
-        "/samplePhpApi/products/update.php?id={id}&name={name}&price={price}": {
-            "get": {
-                "tags": [
-                    "products"
-                ],
-                "summary": "edit products",
-                "parameters": [
-                    {
-                        "name": "id",
-                        "in": "path",
-                        "description": "Id of record you want to edit",
-                        "required": true,
-                        "schema": {
-                            "type": "integer",
-                            "format": "int32"
-                        }
-                    },
-                    {
-                        "name": "name",
-                        "in": "path",
-                        "description": "new name for this product",
-                        "required": false,
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    {
-                        "name": "price",
-                        "in": "path",
-                        "description": "new price for this product",
-                        "required": false,
-                        "schema": {
-                            "type": "integer",
-                            "format": "int32"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "ok"
-                    },
-                    "404": {
-                        "description": "ERROR : Not found"
-                    },
-                    "default": {
-                        "description": "unexpected error"
-                    }
-                }
-            }
         }
     },
     "definitions": {},
     "tags": [
+        {
+            "name": "products",
+            "description": "Acces to products list and do CRUD"
+        },
         {
             "name": "products",
             "description": "Acces to products list and do CRUD"
